--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/stephds01/integrationMusicien#readme",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "compass": "^0.1.1",
-    "live-server": "^1.0.0"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-sass": "^2.3.2",
+    "live-server": "^1.0.0",
+    "sass": "^0.5.0"
   }
 }
